force-app/main/default/objects/CsvUploaderMapping__mdt/CsvUploaderMapping__mdt.object-meta.xml
<CustomObject>
    <label>CSV Uploader Mapping</label>
    <pluralLabel>CSV Uploader Mappings</pluralLabel>
</CustomObject>