force-app/main/default/objects/CsvUploaderMapping__mdt/fields/CsvHeader_10__c.field-meta.xml
<CustomField>
    <fullName>CsvHeader_10__c</fullName>
    <label>CSV Header 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>