force-app/main/default/objects/CsvUploaderMapping__mdt/fields/CsvHeader_11__c.field-meta.xml
<CustomField>
    <fullName>CsvHeader_11__c</fullName>
    <label>CSV Header 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>