force-app/main/default/objects/CsvUploaderMapping__mdt/fields/CsvHeader_12__c.field-meta.xml
<CustomField>
    <fullName>CsvHeader_12__c</fullName>
    <label>CSV Header 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>