force-app/main/default/objects/CsvUploaderMapping__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sell_Through_Report_Import__c</fullName>
                <default>true</default>
                <label>Sell_Through_Report_Import__c</label>
            </value>
            <value>
                <fullName>Stock_Report_Import__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>