force-app/main/default/objects/CsvUploaderMapping__mdt/fields/ObjectField_10__c.field-meta.xml
<CustomField>
    <fullName>ObjectField_10__c</fullName>
    <label>Object Field 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>