force-app/main/default/objects/CsvUploaderMapping__mdt/fields/ObjectField_11__c.field-meta.xml
<CustomField>
    <fullName>ObjectField_11__c</fullName>
    <label>Object Field 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>