force-app/main/default/objects/CsvUploaderMapping__mdt/fields/ObjectField_12__c.field-meta.xml
<CustomField>
    <fullName>ObjectField_12__c</fullName>
    <label>Object Field 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>